<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#E6E4EAEE"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".Store_Management"
tools:showIn="@layout/app_bar_store__management">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="158dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/lap1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="156dp"
                        android:layout_height="57dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="HP Pavilion 14-ce1999na"
                        android:textColor="#052A3D"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="161dp"
                        android:layout_height="87dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/des1"
                        android:textColor="#74726B" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="139dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/price1"
                        android:textColor="#614A05" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/update1"
                            android:layout_width="71dp"
                            android:layout_height="39dp"

                            android:background="#E4F7B454"
                            android:text="@string/btnUpdate" />

                        <Button
                            android:id="@+id/remove3"
                            android:layout_width="71dp"
                            android:layout_height="39dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="8dp"
                            android:background="#C3C54E4E"
                            android:text="@string/btnRemove" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="183dp"
                    android:layout_height="162dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ssd" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="156dp"
                        android:layout_height="57dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="PNY XLR8 250GB SSD"
                        android:textColor="#052A3D"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="157dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/des2"
                        android:textColor="#74726B" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="139dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/price2"
                        android:textColor="#614A05" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/update4"
                            android:layout_width="71dp"
                            android:layout_height="39dp"

                            android:background="#E4F7B454"
                            android:text="@string/btnUpdate" />

                        <Button
                            android:id="@+id/remove4"
                            android:layout_width="71dp"
                            android:layout_height="39dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="8dp"
                            android:background="#C3C54E4E"
                            android:text="@string/btnRemove" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="183dp"
                    android:layout_height="162dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ssd" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView

                        android:layout_width="156dp"
                        android:layout_height="57dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="PNY XLR8 250GB SSD"
                        android:textColor="#052A3D"
                        android:textSize="24sp" />

                    <TextView

                        android:layout_width="157dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/des2"
                        android:textColor="#74726B" />

                    <TextView

                        android:layout_width="139dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/price2"
                        android:textColor="#614A05" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/update5"
                            android:layout_width="71dp"
                            android:layout_height="39dp"

                            android:background="#E4F7B454"

                            android:text="@string/btnUpdate" />

                        <Button
                            android:id="@+id/remove6"
                            android:layout_width="71dp"
                            android:layout_height="39dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="8dp"
                            android:background="#C3C54E4E" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="65dp"
                            android:layout_height="65dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>